--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,7 +5,7 @@ const pageTitle = "Blog Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <p>This is where I will post about my journey learning Astro.</p>
+  <p>This is where I will post about my journey learning Astro!</p>
   <ul>
     {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
   </ul>
