--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import BlogPost from '../components/BlogPost.astro';
 import BaseLayout from "../layouts/BaseLayout.astro";
 const allPosts = await Astro.glob('./posts/*.md');
 const pageTitle = "Blog Page";
@@ -7,6 +8,6 @@ const pageTitle = "Blog Page";
 <BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro!</p>
   <ul>
-    {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </BaseLayout>
